--- a/categories/templates/category_list.html
+++ b/categories/templates/category_list.html
@@ -309,7 +309,7 @@ Lista de Categorias
         document.getElementById('category_image').value = '';
 
         // Atualizar a URL de ação do formulário de edição
-        document.getElementById('editCategoryForm').action = `/administration/categories/${categoryId}/update/`;
+        document.getElementById('editCategoryForm').action = `/categories/${categoryId}/update/`;
 
         // Mostrar o modal de edição
         const editCategoryModal = new bootstrap.Modal(document.getElementById('editCategoryModal'));
@@ -340,7 +340,7 @@ Lista de Categorias
       const form = event.target;
       const categoryId = form.querySelector('#delete_category_id').value;
 
-      fetch(`/administration/categories/${categoryId}/delete/`, {
+      fetch(`/categories/${categoryId}/delete/`, {
         method: 'DELETE',
         headers: {
           'X-CSRFToken': form.querySelector('[name="csrfmiddlewaretoken"]').value,
