--- a/store/templates/components/_modal_login.html
+++ b/store/templates/components/_modal_login.html
@@ -7,7 +7,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form method="post" action="{% url 'login' %}">
+                <form method="post" action="{% url 'gestao' %}">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label for="id_username" class="form-label">Email / Usuário:</label>
